# jobscout

./: .gitignore  config.example.yaml  pyproject.toml  requirements.txt
jobscout/: apply_greenhouse.py  apply_linkedin.py  budget.py  config.py  db.py  llm.py  main.py
jobscout/integrations/: imessage.py  pigeon.py
jobscout/pipeline/: classifier.py  cv_tuner.py  extractor.py  reporter.py  scorer.py  title_filter.py
jobscout/scrapers/: __init__.py  _browser.py  apple.py  ashby.py  base.py  discovery.py  gmail_alerts.py  greenhouse.py  indeed.py  lever.py  linkedin.py  monster.py  reddit.py  sentry.py  slack.py
jobscout/templates/: report.html
tests/: test_ashby.py  test_budget.py  test_classifier.py  test_cv_tuner.py  test_db.py  test_discovery.py  test_extractor.py  test_greenhouse.py  test_imessage.py  test_indeed.py  test_lever.py  test_llm.py  test_main.py  test_pigeon.py  test_reporter.py  test_scorer.py
